// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sanity test - SNAPSHOT 1`] = `
<h1>
  Hello 
</h1>
`;

exports[`Test html name tag is not interpreted - SNAPSHOT 1`] = `
<h1>
  Hello 
  World &lt;div&gt;test&lt;/div&gt;
</h1>
`;

exports[`Test name property - SNAPSHOT 1`] = `
<h1>
  Hello 
  World
</h1>
`;
